datalakehouse: bump old image versions for retest (#100)
* datalakehouse: bump low-risk images and pin floating tags

- postgres 17.5 -> 17.10 (metastore DB; same major)
- apache/spark 3.5.3 -> 3.5.8 (stay on 3.5.x for Hudi compatibility)
- minio/minio: pin to RELEASE.2025-09-07T16-13-09Z (was unpinned :latest)
- minio/mc: pin to RELEASE.2025-08-13T08-35-41Z (was unpinned :latest)
- adminer: pin to 5.4.2 (was unpinned :latest)

Pinning the three floating tags makes the stack reproducible. starrocks
fe/be (4.1-latest) and debezium/postgres:17 are left as rolling tags since
they are current.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>

* datalakehouse: bump Hive metastore image to 3.1.3-e.15

starburstdata/hive 3.1.2-e.18 (published 2022) -> 3.1.3-e.15, the newest tag
Starburst publishes for their community Hive image. Same Hive 3.1 line, so
low risk, but this is an old/abandoned image family overall — flagged for
retest.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>

* datalakehouse: bump Debezium stack 2.6 -> 3.3 (zookeeper, kafka, connect)

debezium/{zookeeper,kafka,connect} 2.6 (2024-07) -> 3.3.

3.3 is the newest Debezium version that still publishes a zookeeper image;
4.x+ moved Kafka to KRaft and dropped the standalone zookeeper image, which
would require removing the zookeeper service and reconfiguring Kafka. Staying
on 3.3 keeps the current architecture, so this bump is config-compatible.

Also updated README: runtime references 2.6 -> 3.3, and made the optional
Debezium JDBC sink connector download guidance version-agnostic (the JDBC
connector trails the runtime releases on Maven Central; no 3.3.x exists yet,
so the docs now say to use the latest 3.x Final).

HIGH-RISK / NEEDS RETEST: the CDC scenario (Postgres source -> Kafka ->
StarRocks sink) was not run end-to-end against 3.3. Verify the Kafka listener
env vars (ZOOKEEPER_CONNECT/KAFKA_LISTENERS) and the connector configs still
work on the 3.3 images.

Co